--- a/frontend/templates/price.html
+++ b/frontend/templates/price.html
@@ -15,6 +15,17 @@
         <form method="POST">
           {% csrf_token %}
           {{ form | crispy }}
+
+          <div class="range-slider">
+              <input type="text" class="js-range-slider" value="" /> <br>
+          </div>
+
+          <div class="extra-controls form-inline">
+            <div class="form-group">
+              <input type="text" class="js-input-from form-control" value="0" style="width: 80px; margin-right: 30px;" />
+              <input type="text" class="js-input-to form-control" value="0" style="width: 80px;" />
+            </div>
+          </div><br>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </nav>
@@ -27,25 +38,6 @@
             <span>Set Attributes</span>
         </button>
         <br>
-
-
-
-
-
-
-        <div class="wrapper" style="padding:20px;">
-        <div class="range-slider">
-            <input type="text" class="js-range-slider" value="" />
-        </div>
-        <br><br><br>
-        <div class="extra-controls form-inline">
-          <div class="form-group">
-            <input type="text" class="js-input-from form-control" value="0" />
-            <input type="text" class="js-input-to form-control" value="0" />
-          </div>
-        </div>
-        </div>
-
 
         <nav id="subnav" class="navbar navbar-expand-lg navbar-light bg-light">
               <ul id="subnav" class="navbar-nav">
@@ -61,7 +53,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Spot</a>
                     </li>
-
               </ul>
         </nav>
 
@@ -141,6 +132,7 @@
 </script>
 
 <!-- SLIDER -->
+<!-- https://codepen.io/anon/pen/rbpqME -->
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.min.js" ></script> -->
 <script src="{% static 'js/slider.js' %}" ></script>
 
