--- a/frontend/staticfiles/css/grayscale.css
+++ b/frontend/staticfiles/css/grayscale.css
@@ -1,4 +1,4 @@
-/*!
+home.png/*!
  * Start Bootstrap - Grayscale v5.0.5 (https://startbootstrap.com/template-overviews/grayscale)
  * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
@@ -92,8 +92,8 @@
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616)), url("../img/bg-masthead.jpg");
-  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("../img/bg-masthead.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(2, 8, 32, 0.1)), color-stop(75%, rgba(2, 8, 32, 0.5)), to(#021220)), url("../img/home.png");
+  background: linear-gradient(to bottom, rgba(2, 8, 32, 0.1) 0%, rgba(2, 8, 32, 0.5) 75%, #021220 100%), url("../img/home.png");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
