--- a/frontend/staticfiles/css/sidebar.css
+++ b/frontend/staticfiles/css/sidebar.css
@@ -243,40 +243,44 @@ a.article:hover {
   background-color: #71aaa7;
 }
 
-.comparecards {
-  box-sizing: border-box;
+/* The Modal (background) */
+.compareview {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 70px;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-.comparecards, .comparecards:before, *:after {
-  box-sizing: inherit;
+/* Modal Content */
+.compare-container {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  padding-bottom: 50px;
+  border: 1px solid #888;
+  width: 70%;
 }
 
-.column {
-  float: left;
-  width: 33.3%;
-  margin-bottom: 16px;
-  padding: 0 8px;
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
 }
 
-@media screen and (max-width: 650px) {
-  .column {
-    width: 100%;
-    display: block;
-  }
-}
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-.container {
-  padding: 0 16px;
-}
-
-.container::after, .row::after {
-  content: "";
-  clear: both;
-  display: table;
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 
