--- a/frontend/templates/compare.html
+++ b/frontend/templates/compare.html
@@ -14,6 +14,17 @@
         <form method="POST">
           {% csrf_token %}
           {{ form | crispy }}
+
+          <div class="range-slider">
+              <input type="text" class="js-range-slider" value="" /> <br>
+          </div>
+
+          <div class="extra-controls form-inline">
+            <div class="form-group">
+              <input type="text" class="js-input-from form-control" value="0" style="width: 80px; margin-right: 30px;" />
+              <input type="text" class="js-input-to form-control" value="0" style="width: 80px;" />
+            </div>
+          </div><br>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </nav>
@@ -96,39 +107,15 @@
 
         <br><br>
 
-        <button type="button" id="comparebutton" class="btn btn-info">
-            <span>Compare</span>
+        <button id="comparebutton" class="btn btn-info">
+            Compare
         </button>
 
         <div class="line"></div>
 
-        <div class="comparecards">
-          <div class="row">
-
-            <div class="column">
-              <div class="card">
-                <div class="container">
-                  <p> card1 </p>
-                </div>
-              </div>
-            </div>
-
-            <div class="column">
-              <div class="card">
-                <div class="container">
-                  <p> card2 </p>
-                </div>
-              </div>
-            </div>
-
-            <div class="column">
-              <div class="card">
-                <div class="container">
-                  <p> card3 </p>
-                </div>
-              </div>
-            </div>
-
+        <div id="comparepop" class="compareview">
+          <div class="compare-container">
+            <span class="close">&times;</span>
           </div>
       </div>
 
@@ -142,6 +129,8 @@
 
 
 {% block script %}
+
+
 <!-- SIDE BAR -->
 <script type="text/javascript">
     $(document).ready(function () {
@@ -156,6 +145,11 @@
         });
     });
 </script>
+
+<!-- SLIDER -->
+<!-- https://codepen.io/anon/pen/rbpqME -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.min.js" ></script> -->
+<script src="{% static 'js/slider.js' %}" ></script>
 
 <!-- BOOTSTRAP TABLE -->
 <script type="text/javascript">
@@ -181,20 +175,46 @@
 <!-- SELECTION -->
 <script type="text/javascript">
   $(document).ready(function() {
-    var table = $('#instances').DataTable();
+  	 var table = $('#instances').DataTable();
+     table.selectedProducts = 0;
 
+    // selecting products
     $('#instances tbody').on( 'click', 'tr', function () {
-        $(this).toggleClass('selected');
+      if ($(this).hasClass('selected')) {
+        $(this).removeClass('selected');
+        table.selectedProducts -= 1;
+      } else if (table.selectedProducts < 3 && !$(this).hasClass('selected')) {
+          $(this).addClass('selected');
+          table.selectedProducts += 1;
+      }
     } );
 
-    $('#comparebutton').on('click', function () {
-        var selected = document.querySelectorAll('selected');
-        for (var i = 0; i < selected.length; ++i) {
-           selected[i].style.backgroundColor = red;
+    var comparePop = document.getElementById('comparepop');
+    var btn = document.getElementById('comparebutton');
+    var span = document.getElementsByClassName("close")[0];
+    var card = 0;
+
+    btn.onclick = function() {
+      comparePop.style.display = "block";
+      table.rows().every(function(rowIndx, tableLoop, rowLoop) {
+        if ($(this).hasClass('selected')) {
+          var data = this.data();
+          data.style.color = red;
         }
-    } );
+      } );
+    }
+
+    span.onclick = function() {
+      comparePop.style.display = "none";
+    }
+
   } );
 </script>
+
+<script type="text/javascript">
+
+</script>
+
 
 
 {% endblock %}
